--- a/FeaturedArticles.html
+++ b/FeaturedArticles.html
@@ -63,7 +63,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
-                <li><a href="#blog">Blog</a></li>
+                <li><a href="Blog.html">Blog</a></li>
                 <li><a href="Contact.html">Contact</a></li>
                 <li><a href="FeaturedArticles.html">Featured Articles</a></li>
             </ul>
