--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Main Content Section -->
     <main>
         <a href="https://www.simplypsychology.org/brodmann-areas.html">
-            <img src="brain.jpg" class="centered-image" height="400" width="600" title="Brodmann Areas, named after German neurologist Korbinian Brodmann, are a system for mapping and categorizing regions of the human cerebral cortex based on their distinct cellular architecture and functions. These numbered areas, which range from 1 to 52, provide a structural framework for understanding different brain functions, such as sensory processing, motor control, and higher cognitive processes, contributing to our knowledge of brain organization and function.">
+            <img src="brain.JPG" class="centered-image" height="400" width="600" title="Brodmann Areas, named after German neurologist Korbinian Brodmann, are a system for mapping and categorizing regions of the human cerebral cortex based on their distinct cellular architecture and functions. These numbered areas, which range from 1 to 52, provide a structural framework for understanding different brain functions, such as sensory processing, motor control, and higher cognitive processes, contributing to our knowledge of brain organization and function.">
         </a>
     </main>
 
